// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInternalPaging tests change currentPage from click 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span>
          21
        </span>
      </td>
      <td>
        <span>
          Chester A. Arthur
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1829
        </span>
      </td>
      <td>
        <span>
          1886
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1881-09-19
        </span>
      </td>
      <td>
        <span>
          1885-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          22
        </span>
      </td>
      <td>
        <span>
          Grover Cleveland
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1837
        </span>
      </td>
      <td>
        <span>
          1908
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1885-03-04
        </span>
      </td>
      <td>
        <span>
          1889-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          23
        </span>
      </td>
      <td>
        <span>
          Benjamin Harrison
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1833
        </span>
      </td>
      <td>
        <span>
          1901
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1889-03-04
        </span>
      </td>
      <td>
        <span>
          1893-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          24
        </span>
      </td>
      <td>
        <span>
          Grover Cleveland
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1837
        </span>
      </td>
      <td>
        <span>
          1908
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1893-03-04
        </span>
      </td>
      <td>
        <span>
          1897-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          25
        </span>
      </td>
      <td>
        <span>
          William McKinley
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1843
        </span>
      </td>
      <td>
        <span>
          1901
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1897-03-04
        </span>
      </td>
      <td>
        <span>
          1901-09-14
        </span>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests change currentPage from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span>
          21
        </span>
      </td>
      <td>
        <span>
          Chester A. Arthur
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1829
        </span>
      </td>
      <td>
        <span>
          1886
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1881-09-19
        </span>
      </td>
      <td>
        <span>
          1885-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          22
        </span>
      </td>
      <td>
        <span>
          Grover Cleveland
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1837
        </span>
      </td>
      <td>
        <span>
          1908
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1885-03-04
        </span>
      </td>
      <td>
        <span>
          1889-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          23
        </span>
      </td>
      <td>
        <span>
          Benjamin Harrison
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1833
        </span>
      </td>
      <td>
        <span>
          1901
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1889-03-04
        </span>
      </td>
      <td>
        <span>
          1893-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          24
        </span>
      </td>
      <td>
        <span>
          Grover Cleveland
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1837
        </span>
      </td>
      <td>
        <span>
          1908
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1893-03-04
        </span>
      </td>
      <td>
        <span>
          1897-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          25
        </span>
      </td>
      <td>
        <span>
          William McKinley
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1843
        </span>
      </td>
      <td>
        <span>
          1901
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1897-03-04
        </span>
      </td>
      <td>
        <span>
          1901-09-14
        </span>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="2"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`withInternalPaging tests render paging 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          president
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align: right; white-space: nowrap; width: 140px;"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <span>
          1
        </span>
      </td>
      <td>
        <span>
          George Washington
        </span>
      </td>
      <td>
        <span>
          No Party
        </span>
      </td>
      <td>
        <span>
          1732
        </span>
      </td>
      <td>
        <span>
          1799
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1789-04-30
        </span>
      </td>
      <td>
        <span>
          1797-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          2
        </span>
      </td>
      <td>
        <span>
          John Adams
        </span>
      </td>
      <td>
        <span>
          Federalist
        </span>
      </td>
      <td>
        <span>
          1735
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1797-03-04
        </span>
      </td>
      <td>
        <span>
          1801-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          3
        </span>
      </td>
      <td>
        <span>
          Thomas Jefferson
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1743
        </span>
      </td>
      <td>
        <span>
          1826
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1801-03-04
        </span>
      </td>
      <td>
        <span>
          1809-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          4
        </span>
      </td>
      <td>
        <span>
          James Madison
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1751
        </span>
      </td>
      <td>
        <span>
          1836
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1809-03-04
        </span>
      </td>
      <td>
        <span>
          1817-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          5
        </span>
      </td>
      <td>
        <span>
          James Monroe
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1758
        </span>
      </td>
      <td>
        <span>
          1831
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1817-03-04
        </span>
      </td>
      <td>
        <span>
          1825-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          6
        </span>
      </td>
      <td>
        <span>
          John Quincy Adams
        </span>
      </td>
      <td>
        <span>
          Democratic-Republican
        </span>
      </td>
      <td>
        <span>
          1767
        </span>
      </td>
      <td>
        <span>
          1848
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1825-03-04
        </span>
      </td>
      <td>
        <span>
          1829-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          7
        </span>
      </td>
      <td>
        <span>
          Andrew Jackson
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1767
        </span>
      </td>
      <td>
        <span>
          1845
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1829-03-04
        </span>
      </td>
      <td>
        <span>
          1837-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          8
        </span>
      </td>
      <td>
        <span>
          Martin Van Buren
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1782
        </span>
      </td>
      <td>
        <span>
          1862
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1837-03-04
        </span>
      </td>
      <td>
        <span>
          1841-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          9
        </span>
      </td>
      <td>
        <span>
          William Henry Harrison
        </span>
      </td>
      <td>
        <span>
          Whig
        </span>
      </td>
      <td>
        <span>
          1773
        </span>
      </td>
      <td>
        <span>
          1841
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1841-03-04
        </span>
      </td>
      <td>
        <span>
          1841-04-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          10
        </span>
      </td>
      <td>
        <span>
          John Tyler
        </span>
      </td>
      <td>
        <span>
          Whig
        </span>
      </td>
      <td>
        <span>
          1790
        </span>
      </td>
      <td>
        <span>
          1862
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1841-04-04
        </span>
      </td>
      <td>
        <span>
          1845-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          11
        </span>
      </td>
      <td>
        <span>
          James K. Polk
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1795
        </span>
      </td>
      <td>
        <span>
          1849
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1845-03-04
        </span>
      </td>
      <td>
        <span>
          1849-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          12
        </span>
      </td>
      <td>
        <span>
          Zachary Taylor
        </span>
      </td>
      <td>
        <span>
          Whig
        </span>
      </td>
      <td>
        <span>
          1784
        </span>
      </td>
      <td>
        <span>
          1850
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1849-03-04
        </span>
      </td>
      <td>
        <span>
          1850-07-09
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          13
        </span>
      </td>
      <td>
        <span>
          Millard Fillmore
        </span>
      </td>
      <td>
        <span>
          Whig
        </span>
      </td>
      <td>
        <span>
          1800
        </span>
      </td>
      <td>
        <span>
          1874
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1850-07-09
        </span>
      </td>
      <td>
        <span>
          1853-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          14
        </span>
      </td>
      <td>
        <span>
          Franklin Pierce
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1804
        </span>
      </td>
      <td>
        <span>
          1869
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1853-03-04
        </span>
      </td>
      <td>
        <span>
          1857-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          15
        </span>
      </td>
      <td>
        <span>
          James Buchanan
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1791
        </span>
      </td>
      <td>
        <span>
          1868
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1857-03-04
        </span>
      </td>
      <td>
        <span>
          1861-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          16
        </span>
      </td>
      <td>
        <span>
          Abraham Lincoln
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1809
        </span>
      </td>
      <td>
        <span>
          1865
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1861-03-04
        </span>
      </td>
      <td>
        <span>
          1865-04-15
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          17
        </span>
      </td>
      <td>
        <span>
          Andrew Johnson
        </span>
      </td>
      <td>
        <span>
          Democratic
        </span>
      </td>
      <td>
        <span>
          1808
        </span>
      </td>
      <td>
        <span>
          1875
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1865-04-15
        </span>
      </td>
      <td>
        <span>
          1869-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          18
        </span>
      </td>
      <td>
        <span>
          Ulysses S. Grant
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1822
        </span>
      </td>
      <td>
        <span>
          1885
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1869-03-04
        </span>
      </td>
      <td>
        <span>
          1877-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          19
        </span>
      </td>
      <td>
        <span>
          Rutherford B. Hayes
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1822
        </span>
      </td>
      <td>
        <span>
          1893
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1877-03-04
        </span>
      </td>
      <td>
        <span>
          1881-03-04
        </span>
      </td>
    </tr>
    <tr>
      <td>
        <span>
          20
        </span>
      </td>
      <td>
        <span>
          James A. Garfield
        </span>
      </td>
      <td>
        <span>
          Republican
        </span>
      </td>
      <td>
        <span>
          1831
        </span>
      </td>
      <td>
        <span>
          1881
        </span>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <span>
          1881-03-04
        </span>
      </td>
      <td>
        <span>
          1881-09-19
        </span>
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td
        colspan="7"
      >
        <table
          class="form-inline"
          width="100%"
        >
          <tbody>
            <tr>
              <td
                style="font-weight: bold;"
                width="33%"
              >
                25 Records
              </td>
              <td
                style="text-align: center;"
                width="34%"
              >
                <a
                  class="glyphicon glyphicon-fast-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <a
                  class="glyphicon glyphicon-backward"
                  href="#"
                  style="text-decoration: none; color: silver; cursor: default;"
                />
                 
                <span>
                  Page  
                  <span>
                    <input
                      class="form-control input-sm"
                      style="width: 60px;"
                      type="text"
                      value="1"
                    />
                  </span>
                    of 
                  2
                </span>
                 
                <a
                  class="glyphicon glyphicon-forward"
                  href="#"
                  style="text-decoration: none;"
                />
                 
                <a
                  class="glyphicon glyphicon-fast-forward"
                  href="#"
                  style="text-decoration: none;"
                />
              </td>
              <td
                style="text-align: right;"
                width="33%"
              >
                Show:
                <select
                  class="form-control input-sm"
                  style="width: 80px;"
                >
                  <option
                    value="10"
                  >
                    10
                  </option>
                  <option
                    value="20"
                  >
                    20
                  </option>
                  <option
                    value="50"
                  >
                    50
                  </option>
                  <option
                    value="100"
                  >
                    100
                  </option>
                  <option
                    value="500"
                  >
                    500
                  </option>
                </select>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
    </tr>
  </tfoot>
</table>
`;
